--- a/src/components/Home/QuizQuestions/style.module.css
+++ b/src/components/Home/QuizQuestions/style.module.css
@@ -9,6 +9,22 @@
 .qq-container {
     width: 550px;
 }
+.qq-timer-wrap {
+    gap: 10px;
+    top: 180px;
+    right: 30px;
+    width: 450px;
+    display: flex;
+    text-align: center;
+    position: absolute;
+    justify-content: center;
+}
+.qq-timer-wrap p {
+    color: rgb(97, 6, 158);
+    font-weight: 500;
+    letter-spacing: 1px;
+    font-size: 24px;
+}
 .qq-container h3 {
     margin-bottom: 50px;
     text-align: center;
