--- a/src/components/rankingList/style.module.css
+++ b/src/components/rankingList/style.module.css
@@ -6,7 +6,43 @@
     justify-content: center;
 }
 .rl-content-wrapper {
+    gap: 10px;
     width: 950px;
     height: 650px;
+    display: flex;
+    padding: 40px 20px;
+    flex-direction: column;
     background-color: #2b2929;
+}
+.rl-ranking-column {
+    border-right: 4px solid #ffffff23;
+    height: 100%;
+    width: 100px;
+}
+.rl-jogador {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    cursor: default;
+    padding: 0 30px;
+    color: #ffffff;
+    border-radius: 5px;
+    align-items: center;
+    background-color: #ffffff3e;
+    justify-content: space-between;
+}
+.rl-btn-wrapper {
+    width: 100%;
+    display: flex;
+    padding: 0 10px;
+    margin: 40px 0 0 0;
+    justify-content: flex-end;
+}
+.rl-btn {
+    border: none;
+    color: #ffffff;
+    padding: 10px 25px;
+    border-radius: 5px;
+    text-decoration: none;
+    background-color: rgb(106, 10, 111);
 }
