--- a/src/components/Background/style.module.css
+++ b/src/components/Background/style.module.css
@@ -38,3 +38,12 @@
         transform-origin: center center;
     }
 }
+
+.teste-div {
+    top: 100px;
+    right: 100px;
+    width: 550px;
+    height: 250px;
+    position: absolute;
+    background-color: red;  
+}
